--- a/index.html
+++ b/index.html
@@ -80,10 +80,14 @@
     </iframe>
 
     <!-- Forecast overlay -->
+
     <img
       id="forecastOverlay"
       src="chart.PNG"
       style="position:absolute; top:0; left:0; opacity:0.35;">
+    #forecastOverlay {
+    pointer-events: none;
+     }
   </div>
 </div>
 
