--- a/index.html
+++ b/index.html
@@ -1,243 +1,252 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Forecast + Real Chart</title>
 
-  <title>Forecast Chart</title>
+<!-- CSS -->
+<style>
+  html, body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+  }
 
-  <style>
-    /* ALL CSS GOES HERE */
+  /* AUTH UI */
+  #authBox {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #fff;
+    padding: 20px;
+    z-index: 10000;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    text-align: center;
+  }
 
-   html, body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
+  #authBox input {
+    display: block;
+    margin: 10px auto;
+    padding: 8px;
+    width: 200px;
+  }
 
-#chartSection {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: black;
-   display: none;
-}
+  #authBox button {
+    margin: 5px;
+    padding: 8px 12px;
+    cursor: pointer;
+  }
 
-#chartWrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+  /* CHART SECTION */
+  #chartSection {
+    display: none; /* hidden until login */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: black;
+  }
 
-#realChart {
-  width: 100%;
-  height: 100%;
-  border: none;
-}
+  #chartWrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 
-    #forecastOverlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      opacity: 0.35;
-      z-index: 2;
-      pointer-events: none;
-    }
+  #realChart {
+    width: 100%;
+    height: 100%;
+    border: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+  }
 
-    #controls {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      background: rgba(0,0,0,0.75);
-      color: white;
-      padding: 10px;
-      z-index: 9999;
-      font-size: 12px;
-    }
+  #forecastOverlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.35;
+    z-index: 2;
+    pointer-events: none;
+  }
 
-    #controls input {
-      width: 150px;
-    }
+  /* CONTROLS */
+  #controls {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    background: rgba(0,0,0,0.75);
+    color: white;
+    padding: 10px;
+    z-index: 9999;
+    font-size: 12px;
+    border-radius: 5px;
+  }
 
-#authBox {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  background: white;
-  padding: 15px;
-  z-index: 10000;
-}
+  #controls label {
+    display: block;
+    margin-top: 5px;
+  }
 
+  #controls input {
+    width: 150px;
+  }
 
-  </style>
+  /* Logout Button */
+  #logoutBtn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 10000;
+    padding: 8px 12px;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+</style>
 </head>
-
-
 <body>
 
-<!-- 🔐 AUTH UI -->
+<!-- AUTH UI -->
 <div id="authBox">
   <h3>Login / Signup</h3>
-
   <input id="email" type="email" placeholder="Email">
   <input id="password" type="password" placeholder="Password">
-
   <button id="loginBtn">Login</button>
   <button id="signupBtn">Sign Up</button>
   <button id="forgotBtn">Forgot Password</button>
-
   <hr>
-
   <button id="googleBtn">Continue with Google</button>
 </div>
 
-<!-- 📊 CHART UI -->
-
-
+<!-- CHART SECTION -->
 <div id="chartSection">
 
-<button
-  id="logoutBtn"
-  style="position:fixed;top:10px;right:10px;z-index:10000;">
-  Logout
-</button>
-
+  <!-- LOGOUT -->
+  <button id="logoutBtn">Logout</button>
 
   <!-- CONTROLS -->
   <div id="controls">
-    Opacity
-    <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.35"><br>
+    <label>Opacity</label>
+    <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.35">
 
-    X
-    <input type="range" id="xSlider" min="-500" max="500" value="0"><br>
+    <label>X</label>
+    <input type="range" id="xSlider" min="-500" max="500" value="0">
 
-    Y
-    <input type="range" id="ySlider" min="-300" max="300" value="0"><br>
+    <label>Y</label>
+    <input type="range" id="ySlider" min="-300" max="300" value="0">
 
-    Zoom
+    <label>Zoom</label>
     <input type="range" id="zoomSlider" min="50" max="150" value="100">
   </div>
 
   <!-- CHART -->
   <div id="chartWrapper">
-    <iframe
-  id="realChart"
-  src="https://ssltvc.investing.com/?pair_ID=8985&interval=300"
-  width="100%"
-  height="100%"
-  frameborder="0">
-</iframe>
-
-    <img
-      id="forecastOverlay"
-      src="chart.PNG">
+    <iframe id="realChart" src="https://ssltvc.investing.com/?pair_ID=8985&interval=300"></iframe>
+    <img id="forecastOverlay" src="chart.PNG">
   </div>
 
 </div>
 
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 
-
+<!-- JS -->
 <script>
+  // CONTROLS
+  const opacitySlider = document.getElementById("opacitySlider");
+  const xSlider = document.getElementById("xSlider");
+  const ySlider = document.getElementById("ySlider");
+  const zoomSlider = document.getElementById("zoomSlider");
+  const forecastOverlay = document.getElementById("forecastOverlay");
 
-// --- CONTROLS LOGIC (BOTTOM OF SCRIPT) ---
+  function updateOverlay() {
+    forecastOverlay.style.opacity = opacitySlider.value;
+    forecastOverlay.style.transform = `translate(${xSlider.value}px, ${ySlider.value}px) scale(${zoomSlider.value/100})`;
+  }
 
-const opacitySlider = document.getElementById("opacitySlider");
-const xSlider = document.getElementById("xSlider");
-const ySlider = document.getElementById("ySlider");
-const zoomSlider = document.getElementById("zoomSlider");
-const forecastOverlay = document.getElementById("forecastOverlay");
+  opacitySlider.oninput = updateOverlay;
+  xSlider.oninput = updateOverlay;
+  ySlider.oninput = updateOverlay;
+  zoomSlider.oninput = updateOverlay;
 
-function updateOverlay() {
-  forecastOverlay.style.opacity = opacitySlider.value;
-  forecastOverlay.style.transform =
-    `translate(${xSlider.value}px, ${ySlider.value}px) scale(${zoomSlider.value / 100})`;
-}
-
-opacitySlider.oninput = updateOverlay;
-xSlider.oninput = updateOverlay;
-ySlider.oninput = updateOverlay;
-zoomSlider.oninput = updateOverlay;
-
-
-
-
-  // 🔥 Firebase config
+  // FIREBASE CONFIG
   const firebaseConfig = {
-    
-
     apiKey: "AIzaSyA22RcIFt5vPfhSUoKMFl1ja6MCXKxv06k",
-    authDomain: "huntorfarm.firebaseapp.com",
-    projectId: "huntorfarm",
-    storageBucket: "huntorfarm.firebasestorage.app",
-    messagingSenderId: "568472349794",
-    appId: "1:568472349794:web:d753d6976166b968ce753b"
+    authDomain: "huntorfarm.firebaseapp.com",
+    projectId: "huntorfarm",
+    storageBucket: "huntorfarm.appspot.com",
+    messagingSenderId: "568472349794",
+    appId: "1:568472349794:web:d753d6976166b968ce753b"
   };
-
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
 
-  // 🔐 UI refs
+  // UI Refs
   const authBox = document.getElementById("authBox");
   const chartSection = document.getElementById("chartSection");
-
+  const loginBtn = document.getElementById("loginBtn");
+  const signupBtn = document.getElementById("signupBtn");
+  const forgotBtn = document.getElementById("forgotBtn");
+  const googleBtn = document.getElementById("googleBtn");
+  const logoutBtn = document.getElementById("logoutBtn");
   const email = document.getElementById("email");
   const password = document.getElementById("password");
 
-  // ✅ Login
+  // LOGIN
   loginBtn.onclick = () => {
     auth.signInWithEmailAndPassword(email.value, password.value)
       .catch(err => alert(err.message));
   };
 
-  // ✅ Signup
+  // SIGNUP
   signupBtn.onclick = () => {
     auth.createUserWithEmailAndPassword(email.value, password.value)
       .then(() => alert("Account created"))
       .catch(err => alert(err.message));
   };
 
-  // ✅ Forgot password
+  // FORGOT PASSWORD
   forgotBtn.onclick = () => {
-    if (!email.value) {
-      alert("Enter email first");
-      return;
-    }
+    if (!email.value) { alert("Enter email first"); return; }
     auth.sendPasswordResetEmail(email.value)
       .then(() => alert("Password reset email sent"))
       .catch(err => alert(err.message));
   };
 
-  // ✅ Google login
+  // GOOGLE LOGIN
   const provider = new firebase.auth.GoogleAuthProvider();
   googleBtn.onclick = () => {
-    auth.signInWithPopup(provider)
-      .catch(err => alert(err.message));
+    auth.signInWithPopup(provider).catch(err => alert(err.message));
   };
 
-  // ✅ Logout
+  // LOGOUT
   logoutBtn.onclick = () => auth.signOut();
 
-  // ✅ Auth state listener (MOST IMPORTANT)
+  // AUTH STATE LISTENER
   auth.onAuthStateChanged(user => {
-  if (user) {
-    authBox.style.display = "none";
-    chartSection.style.display = "block";
-  } else {
-    authBox.style.display = "block";
-    chartSection.style.display = "none";
-  }
-});
-
+    if (user) {
+      authBox.style.display = "none";
+      chartSection.style.display = "block";
+    } else {
+      authBox.style.display = "block";
+      chartSection.style.display = "none";
+    }
+  });
 </script>
-
-
-
 
 </body>
 </html>
