--- a/index.html
+++ b/index.html
@@ -7,114 +7,114 @@
 
 <!-- CSS -->
 <style>
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
-  }
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+}
 
-  /* AUTH UI */
-  #authBox {
-    position: fixed;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: #fff;
-    padding: 20px;
-    z-index: 10000;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    text-align: center;
-  }
+/* AUTH UI */
+#authBox {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #fff;
+  padding: 20px;
+  z-index: 10000;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  text-align: center;
+}
 
-  #authBox input {
-    display: block;
-    margin: 10px auto;
-    padding: 8px;
-    width: 200px;
-  }
+#authBox input {
+  display: block;
+  margin: 10px auto;
+  padding: 8px;
+  width: 200px;
+}
 
-  #authBox button {
-    margin: 5px;
-    padding: 8px 12px;
-    cursor: pointer;
-  }
+#authBox button {
+  margin: 5px;
+  padding: 8px 12px;
+  cursor: pointer;
+}
 
-  /* CHART SECTION */
-  #chartSection {
-    display: none; /* hidden until login */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: black;
-  }
+/* CHART SECTION */
+#chartSection {
+  display: none; /* hidden until login */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: black;
+}
 
-  #chartWrapper {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-  }
+#chartWrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
-  #realChart {
-    width: 100%;
-    height: 100%;
-    border: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-  }
+#realChart {
+  width: 100%;
+  height: 100%;
+  border: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
 
-  #forecastOverlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    opacity: 0.35;
-    z-index: 2;
-    pointer-events: none;
-  }
+#forecastOverlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0.35;
+  z-index: 2;
+  pointer-events: none;
+}
 
-  /* CONTROLS */
-  #controls {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    background: rgba(0,0,0,0.75);
-    color: white;
-    padding: 10px;
-    z-index: 9999;
-    font-size: 12px;
-    border-radius: 5px;
-  }
+/* CONTROLS */
+#controls {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  background: rgba(0,0,0,0.75);
+  color: white;
+  padding: 10px;
+  z-index: 9999;
+  font-size: 12px;
+  border-radius: 5px;
+}
 
-  #controls label {
-    display: block;
-    margin-top: 5px;
-  }
+#controls label {
+  display: block;
+  margin-top: 5px;
+}
 
-  #controls input {
-    width: 150px;
-  }
+#controls input {
+  width: 150px;
+}
 
-  /* Logout Button */
-  #logoutBtn {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    z-index: 10000;
-    padding: 8px 12px;
-    cursor: pointer;
-    border-radius: 5px;
-  }
+/* Logout Button */
+#logoutBtn {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  z-index: 10000;
+  padding: 8px 12px;
+  cursor: pointer;
+  border-radius: 5px;
+}
 </style>
 </head>
 <body>
@@ -166,7 +166,7 @@
 
 <!-- JS -->
 <script>
-  // CONTROLS
+  // ---------------- CONTROLS ----------------
   const opacitySlider = document.getElementById("opacitySlider");
   const xSlider = document.getElementById("xSlider");
   const ySlider = document.getElementById("ySlider");
@@ -183,7 +183,7 @@
   ySlider.oninput = updateOverlay;
   zoomSlider.oninput = updateOverlay;
 
-  // FIREBASE CONFIG
+  // ---------------- FIREBASE ----------------
   const firebaseConfig = {
     apiKey: "AIzaSyA22RcIFt5vPfhSUoKMFl1ja6MCXKxv06k",
     authDomain: "huntorfarm.firebaseapp.com",
@@ -195,7 +195,7 @@
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
 
-  // UI Refs
+  // ---------------- UI ELEMENTS ----------------
   const authBox = document.getElementById("authBox");
   const chartSection = document.getElementById("chartSection");
   const loginBtn = document.getElementById("loginBtn");
@@ -206,20 +206,18 @@
   const email = document.getElementById("email");
   const password = document.getElementById("password");
 
-  // LOGIN
+  // ---------------- AUTH FUNCTIONS ----------------
   loginBtn.onclick = () => {
     auth.signInWithEmailAndPassword(email.value, password.value)
       .catch(err => alert(err.message));
   };
 
-  // SIGNUP
   signupBtn.onclick = () => {
     auth.createUserWithEmailAndPassword(email.value, password.value)
       .then(() => alert("Account created"))
       .catch(err => alert(err.message));
   };
 
-  // FORGOT PASSWORD
   forgotBtn.onclick = () => {
     if (!email.value) { alert("Enter email first"); return; }
     auth.sendPasswordResetEmail(email.value)
@@ -227,16 +225,15 @@
       .catch(err => alert(err.message));
   };
 
-  // GOOGLE LOGIN
   const provider = new firebase.auth.GoogleAuthProvider();
   googleBtn.onclick = () => {
-    auth.signInWithPopup(provider).catch(err => alert(err.message));
+    auth.signInWithPopup(provider)
+      .catch(err => alert(err.message));
   };
 
-  // LOGOUT
   logoutBtn.onclick = () => auth.signOut();
 
-  // AUTH STATE LISTENER
+  // ---------------- AUTO LOGIN ----------------
   auth.onAuthStateChanged(user => {
     if (user) {
       authBox.style.display = "none";
