--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <!-- CSS -->
 <style>
 html, body {
-  width: 100%;
-  height: 100%;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
 }
 
 /* AUTH UI */
@@ -43,12 +45,15 @@ html, body {
 
 /* CHART SECTION */
 #chartSection {
+  display: none; /* hidden until login */
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
+  background: black;
 }
+
 #chartWrapper {
   position: absolute;
   top: 0;
@@ -56,6 +61,7 @@ html, body {
   width: 100%;
   height: 100%;
 }
+
 #realChart {
   width: 100%;
   height: 100%;
@@ -155,7 +161,7 @@ html, body {
 </div>
 
 <!-- Firebase SDK -->
-<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js></script>
+<script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 
 <!-- JS -->
