--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@ html, body {
 </head>
 <body>
 
+<div style="position:fixed; top:60px; right:20px; z-index:10001;">
+  <a href="index.html" style="color:white; margin-right:10px;">India</a>
+  <a href="USASP.html" style="color:white;">USA</a>
+</div>
+
 <!-- AUTH UI -->
 <div id="authBox">
   <h3>Login / Signup</h3>
