--- a/index.html
+++ b/index.html
@@ -173,6 +173,77 @@ html, body {
   </div>
 
 </div>
+<div id="infoSection" style="
+  max-width: 900px;
+  margin: 60px auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  color: #ddd;
+">
+
+  <h2>Market Forecast as Context, Not Signals</h2>
+
+  <p>
+    This platform provides a session-level forecast designed to help traders
+    interpret market structure, validate directional bias, and avoid
+    low-probability trades.
+  </p>
+
+  <p>
+    This is <strong>not</strong> a buy/sell signal service. It is a
+    decision-support overlay intended for disciplined, self-directed traders.
+  </p>
+
+  <h3>How to Use the Forecast</h3>
+
+  <p>
+    Financial markets are probabilistic in nature. AI, ML, and Data Science do
+    not provide certainty — they provide structure.
+  </p>
+
+  <p>
+    The forecast displays an expected session range and directional framework.
+    Users typically wait for real-time price to align with the forecast before
+    participating.
+  </p>
+
+  <p>
+    For example, if a forecast shows a range from <strong>-50 to +150</strong>,
+    many traders focus on capturing a partial move (40–60%) rather than the
+    full range.
+  </p>
+
+  <h3>What This Is / What This Is Not</h3>
+
+  <ul>
+    <li>✔ Market structure and range context</li>
+    <li>✔ Bias validation tool</li>
+    <li>✖ Not a signal service</li>
+    <li>✖ No guaranteed entries or exits</li>
+  </ul>
+
+  <h3>Who This Is For</h3>
+
+  <p>
+    This tool is designed for traders who already understand basic trading
+    mechanics and want additional context before acting.
+  </p>
+
+  <p>
+    If you are looking for guaranteed calls or automated trades, this platform
+    is not suitable.
+  </p>
+
+  <h3>Access & Disclaimer</h3>
+
+  <p>
+    This platform is offered as an analytical and educational tool only. All
+    trading decisions and risks remain solely with the user.
+  </p>
+
+</div>
+
 
 <!-- Firebase v12 Modular SDK -->
 <script type="module">
