--- a/index.html
+++ b/index.html
@@ -170,6 +170,7 @@ html, body {
   &timezone_ID=20"
     ></iframe>
     <img id="forecastOverlay" src="chart.PNG">
+     <img class="forecast" src="actualnifty.PNG">
   </div>
 
 </div>
