--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ html, body {
   &lang_ID=56
   &timezone_ID=20"
     ></iframe>
-    <img id="forecastOverlay" src="chart.PNG">
-     <img class="forecast" src="actualnifty.PNG">
+    <img class="forecast" src="forecast1.png" />
+  <img class="forecast" src="forecast2.png" />
   </div>
 
 </div>
