--- a/index.html
+++ b/index.html
@@ -171,6 +171,11 @@ html, body {
     <input type="range" id="zoomSlider" min="50" max="150" value="100">
   </div>
 
+<div id="forecastSelector">
+  <button onclick="showForecast(0)">F1</button>
+  <button onclick="showForecast(1)">F2</button>
+</div>
+
   <!-- CHART -->
   <div id="chartWrapper">
     <iframe
