--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ function showForecast(index) {
   activeForecast = index;
 }
 //addedends
-  const forecastOverlay = document.getElementById("forecastOverlay");
+ // const forecastOverlay = document.getElementById("forecastOverlay");
 
   function updateOverlay() {
     forecastOverlay.style.opacity = opacitySlider.value;
