--- a/index.html
+++ b/index.html
@@ -1,291 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Forecast + Real Chart</title>
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  font-family: Arial, sans-serif;
-}
+  <meta charset="UTF-8">
+  <title>Market Forecast Platform</title>
 
-/* AUTH UI */
-#authBox {
-  position: fixed;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #fff;
-  padding: 20px;
-  z-index: 10000;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  text-align: center;
-}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-#authBox input {
-  display: block;
-  margin: 10px auto;
-  padding: 8px;
-  width: 200px;
-}
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      background: radial-gradient(circle at top, #111827, #020617);
+      color: #e5e7eb;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
-#authBox button {
-  margin: 5px;
-  padding: 8px 12px;
-  cursor: pointer;
-}
+    .container {
+      text-align: center;
+      max-width: 600px;
+    }
 
-/* CHART SECTION */
-#chartSection {
-  display: none; /* hidden until login */
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  background: black;
-}
+    h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
 
-#chartWrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
+    p {
+      font-size: 14px;
+      opacity: 0.8;
+      margin-bottom: 40px;
+    }
 
-#realChart {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
-  z-index: 1;
-}
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
 
+    .btn {
+      padding: 16px 28px;
+      font-size: 16px;
+      border-radius: 10px;
+      border: none;
+      cursor: pointer;
+      background: #2563eb;
+      color: white;
+      text-decoration: none;
+    }
 
-#forecastOverlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.35;
-  z-index: 2;
-  pointer-events: none;
-}
+    .btn:hover {
+      background: #1d4ed8;
+    }
 
-/* CONTROLS */
-#controls {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  background: rgba(0,0,0,0.75);
-  color: white;
-  padding: 10px;
-  z-index: 9999;
-  font-size: 12px;
-  border-radius: 5px;
-}
-
-#controls label {
-  display: block;
-  margin-top: 5px;
-}
-
-#controls input {
-  width: 150px;
-}
-
-/* Logout Button */
-#logoutBtn {
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  z-index: 10000;
-  padding: 8px 12px;
-  cursor: pointer;
-  border-radius: 5px;
-}
-</style>
+    footer {
+      position: fixed;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 10px;
+      opacity: 0.5;
+    }
+  </style>
 </head>
+
 <body>
 
-<div style="position:fixed; top:60px; right:20px; z-index:10001;">
-  <a href="index.html" style="color:white; margin-right:10px;">India</a>
-  <a href="USASP.html" style="color:white;">USA</a>
-</div>
+  <div class="container">
+    <h1>Visual Market Forecasts</h1>
 
-<!-- AUTH UI -->
-<div id="authBox">
-  <h3>Login / Signup</h3>
-  <input id="email" type="email" placeholder="Email">
-  <input id="password" type="password" placeholder="Password">
-  <button id="loginBtn">Login</button>
-  <button id="signupBtn">Sign Up</button>
-  <button id="forgotBtn">Forgot Password</button>
-  <hr>
-  <button id="googleBtn">Continue with Google</button>
-</div>
+    <p>
+      Experimental forecast structures for interpretation.<br>
+      Not signals. Not advice.
+    </p>
 
-<!-- CHART SECTION -->
-<div id="chartSection">
-
-  <!-- LOGOUT -->
-  <button id="logoutBtn">Logout</button>
-
-  <!-- CONTROLS -->
-  <div id="controls">
-    <label>Opacity</label>
-    <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.35">
-
-    <label>X</label>
-    <input type="range" id="xSlider" min="-500" max="500" value="0">
-
-    <label>Y</label>
-    <input type="range" id="ySlider" min="-300" max="300" value="0">
-
-    <label>Zoom</label>
-    <input type="range" id="zoomSlider" min="50" max="150" value="100">
+    <div class="buttons">
+      <a class="btn" href="india.html">🇮🇳 India Markets</a>
+      <a class="btn" href="usa.html">🇺🇸 USA Markets</a>
+    </div>
   </div>
 
-  <!-- CHART -->
-  <div id="chartWrapper">
-    <iframe
-  id="realChart"
-  src="https://ssltvc.investing.com/?pair_ID=8985
-  &height=1100
-  &width=1900
-  &interval=300
-  &plotStyle=area
-  &domain_ID=56
-  &lang_ID=56
-  &timezone_ID=20"
-    ></iframe>
-    <img id="forecastOverlay" src="chart.PNG">
-  </div>
-
-</div>
-
-<!-- Firebase v12 Modular SDK -->
-<script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-app.js";
-  import { 
-    getAuth, 
-    signInWithEmailAndPassword, 
-    createUserWithEmailAndPassword,
-    sendPasswordResetEmail,
-    GoogleAuthProvider,
-    signInWithPopup,
-    onAuthStateChanged,
-    signInAnonymously,
-    signOut
-  } from "https://www.gstatic.com/firebasejs/12.7.0/firebase-auth.js";
-
-  // Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyA22RcIFt5vPfhSUoKMFl1ja6MCXKxv06k",
-    authDomain: "huntorfarm.firebaseapp.com",
-    projectId: "huntorfarm",
-    storageBucket: "huntorfarm.appspot.com",
-    messagingSenderId: "568472349794",
-    appId: "1:568472349794:web:d753d6976166b968ce753b"
-  };
-
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
-
-  // DOM refs
-  const authBox = document.getElementById("authBox");
-  const chartSection = document.getElementById("chartSection");
-  const email = document.getElementById("email");
-  const password = document.getElementById("password");
-  const loginBtn = document.getElementById("loginBtn");
-  const signupBtn = document.getElementById("signupBtn");
-  const forgotBtn = document.getElementById("forgotBtn");
-  const googleBtn = document.getElementById("googleBtn");
-  const logoutBtn = document.getElementById("logoutBtn");
-
-  // Controls
-  const opacitySlider = document.getElementById("opacitySlider");
-  const xSlider = document.getElementById("xSlider");
-  const ySlider = document.getElementById("ySlider");
-  const zoomSlider = document.getElementById("zoomSlider");
-  const forecastOverlay = document.getElementById("forecastOverlay");
-
-  function updateOverlay() {
-    forecastOverlay.style.opacity = opacitySlider.value;
-    forecastOverlay.style.transform = `translate(${xSlider.value}px, ${ySlider.value}px) scale(${zoomSlider.value/100})`;
-  }
-
-  opacitySlider.oninput = updateOverlay;
-  xSlider.oninput = updateOverlay;
-  ySlider.oninput = updateOverlay;
-  zoomSlider.oninput = updateOverlay;
-
-  // ---------------- AUTH ----------------
-  loginBtn.onclick = () => {
-    signInWithEmailAndPassword(auth, email.value, password.value)
-      .catch(err => alert(err.message));
-  };
-
-  signupBtn.onclick = () => {
-    createUserWithEmailAndPassword(auth, email.value, password.value)
-      .then(() => alert("Account created"))
-      .catch(err => alert(err.message));
-  };
-
-  forgotBtn.onclick = () => {
-    if (!email.value) { alert("Enter email first"); return; }
-    sendPasswordResetEmail(auth, email.value)
-      .then(() => alert("Password reset email sent"))
-      .catch(err => alert(err.message));
-  };
-
-  googleBtn.onclick = () => {
-    const provider = new GoogleAuthProvider();
-    signInWithPopup(auth, provider)
-      .catch(err => alert(err.message));
-  };
-
-  logoutBtn.onclick = () => signOut(auth);
-
-
-onAuthStateChanged(auth, (user) => {
-  if (!user) {
-    signInAnonymously(auth)
-      .catch((error) => {
-        console.error("Anonymous sign-in failed:", error);
-      });
-  }
-});
-
-  // ---------------- AUTO LOGIN ----------------
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      authBox.style.display = "none";
-      chartSection.style.display = "block";
-    } else {
-      authBox.style.display = "block";
-      chartSection.style.display = "none";
-    }
-  });
-
-  // ---------------- RESIZE IFRAME ----------------
-  window.addEventListener('resize', () => {
-    const wrapper = document.getElementById('chartWrapper');
-    const iframe = document.getElementById('realChart');
-    iframe.style.width = wrapper.offsetWidth + 'px';
-    iframe.style.height = wrapper.offsetHeight + 'px';
-  });
-</script>
+  <footer>
+    Educational use only · No financial advice
+  </footer>
 
 </body>
 </html>
