--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
     </p>
 
     <div class="buttons">
-      <a class="btn" href="india.html">🇮🇳 India Markets</a>
-      <a class="btn" href="usa.html">🇺🇸 USA Markets</a>
+      <a class="btn" href="India.html">🇮🇳 India Markets</a>
+      <a class="btn" href="USASP.html">🇺🇸 USA Markets</a>
     </div>
   </div>
 
