--- a/Indianew.html
+++ b/Indianew.html
@@ -120,7 +120,7 @@ html, body {
 
 <div style="position:fixed; top:60px; right:20px; z-index:10001;">
   <a href="index.html" style="color:white; margin-right:10px;">main</a>
-  <a href="Indianew.html" style="color:white;">Indianew</a>
+  <a href="USASP.html" style="color:white;">USA</a>
 </div>
 
 <!-- AUTH UI -->
@@ -169,7 +169,7 @@ html, body {
   &lang_ID=56
   &timezone_ID=20"
     ></iframe>
-    <img id="forecastOverlay" src="chart.PNG">
+    <img id="forecastOverlay" src="USchart.PNG">
   </div>
 
 </div>
