--- a/Indianew.html
+++ b/Indianew.html
@@ -169,7 +169,7 @@ html, body {
   &lang_ID=56
   &timezone_ID=20"
     ></iframe>
-    <img id="forecastOverlay" src="USchart.PNG">
+    <img id="forecastOverlay" src="forecast3.PNG">
   </div>
 
 </div>
